style.css
/* general styles */
body {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', serif;
    font-size: 16px;    
}
h1, h2, h3, h4, h5, h6 {
    margin: 0;
    padding: 0;
    text-decoration: uppercase; 
}
ul, li {
    display: block; 
    margin: 0;
    padding: 0;
}
li a {
    line-height: 1.5;
}
.container {
    width: 1170px;
    height: auto;
    margin: 0 auto; 
}

/* individual styles */
header {
    height: auto;
    margin: 0 366px 0px 367px;
    padding: 0;
    background: rgb(32, 29, 27);    
}
header a {
    font-family: 'Anton' sans-serif;
    color: rgba(236, 232, 232, 80%);    
}

.menu {
    display: flex;  
    margin-left: 110px;
}

.menu li {
    margin: 40px 90px 40px 0;   
}

.menu a {
    font-size: 20px;
    text-decoration: none;   
}

main {
    margin: 0 366px 0 367px;
    background: url('/rsschool-cv/assets/img/city_image.jpeg') 0 0/1170px 100% no-repeat;   
}

.logo {
    max-width: 200px;
    max-height: 200px;
    margin: auto auto auto 2%;
    padding: 2% 0 0 0;
    opacity: 85%;  
}

.logo img {
    border-radius: 100%;
    border: inset 5px rgba(192, 123, 58, 0.664);    
}

h1 {
    font-size: 2.8em;
    color: rgba(236, 232, 232, 90%);    
}

h2 {
    margin: -40px 0 0 70%;
    font-size: 1.8em;
    color: rgba(236, 232, 232, 0.781);  
}

h3 {
    margin: 15px 0 6px 20;
    line-height: 1.5;
    color: rgba(236, 232, 232, 85%);    
}

p {
    font-family: 'Roboto', serif;
    line-height: 1.5;
    color: rgba(236, 232, 232, 0.781);
}

.me h1 {
    margin-top: -100px;
    margin-left: 270px;
    padding-left: 2%;
    background: rgba(21, 22, 22, 0.5);
}

.me h2 {
    margin-right: 0px;
}

.container_1 {
    display: flex;
    justify-content:space-around;
    max-width: auto;
    max-height: auto;
    margin-top: 12rem;
    margin-bottom: 40px;
    padding-right: 30px;
    padding-bottom: 20px;
    padding-left: 20px;
    background: rgba(10, 9, 9, 0.5);
    border: 0 solid rgb(28, 29, 28);
    border-radius: 20px;
}

.about_me {
    padding: 1em 10em 1em 2em;
}

.skills {
    padding: 1.5em 2em 1em 1em;
    line-height: 1.5;
    color: rgba(236, 232, 232, 65%);
}

.skills li {
    width: max-content;
}

.skills h3 {
    margin-bottom: 10px;
}

.code_example {
    
}

.code_example h3 {
    margin-left: 200px;
}

.example {
    margin-right: 100px;
    margin-left: 100px;
    font-size: 1em;
    border: inset 3px rgba(56, 57, 61, 0.65);
    opacity: 80%;
}

.code_example_view textarea {
    margin-left: 102px;
    padding-right: 23px;
    border: double 3px rgb(26, 26, 29);
    background: rgba(211, 140, 82, 0.3);
    color:rgba(245, 236, 236, 0.849);
}

.container_2 {
    display: flex;
    justify-content:space-between;
    align-items: center;
    max-width: auto;
    margin-top: 50px;
    padding: 1.5em 7em 1em 7em;
    background: rgba(10, 9, 9, 0.795);
}

.courses {
   
}

.courses a {
    text-decoration: none;
    color: rgba(236, 232, 232, 65%);
    
}

.courses h3 {
    margin-bottom: 10px;
}

.languages {
    margin-left: 20px;
    line-height: 1.5;
    color: rgba(236, 232, 232, 65%);
}

.languages h3 {
    margin-bottom: 10px;
}

footer {
    width: auto;
    height: auto;
    margin: 0px 366px 0px 367px;
    background: rgb(32, 29, 27);
}

.contact {
    display: flex;
    padding: 2em;
    justify-content: space-between;
    flex-direction: row;
    align-items: center;
}

.contact a {
    color: rgba(241, 233, 233, 0.726);
}

.contact span {
    color: rgba(241, 233, 233, 0.726);
}

